[package]
name = "gcs-substituter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = "0.7.5"
cloud-storage = "0.11.1"
fork_stream = "0.1.0"
futures.workspace = true
google-cloud-storage = "0.18.0"
http = "1.1.0"
once_cell.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
shared_stream = "0.2.1"
tokio.workspace = true
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }

